# tax_etl_pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: pipeline.yml
data/employer/: employers.json
data/individual/: individual_tax_returns_day1.csv  individual_tax_returns_day2.csv  individual_tax_returns_day3.csv
docker/: Dockerfile
docs/: technical-design.md
scripts/: inspect_warehouse.py
src/tax_pipeline/: __init__.py  config.py  pipeline.py
src/tax_pipeline/api/: __init__.py  app.py
src/tax_pipeline/ingestion/: __init__.py  base_extractor.py  csv_extractor.py  json_extractor.py
src/tax_pipeline/models/: __init__.py  schema.py
src/tax_pipeline/orchestration/: __init__.py  flow.py
src/tax_pipeline/quality/: __init__.py  scorer.py
src/tax_pipeline/utils/: __init__.py  logging.py
src/tax_pipeline/validation/: __init__.py  rule.py  rules.py  validator.py
src/tax_pipeline/warehouse/: __init__.py  build.py  connection.py  loader.py  schema.sql
tests/: conftest.py  test_api.py  test_extractors.py  test_orchestration.py  test_rules.py  test_validator_and_scorer.py  test_warehouse.py
